feat: align AI verification workflows
Unify LLM tooling, board/rule/spec contracts, verification traces, fix application, async cancellation UX, and matching documentation/tests.